; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dmu.c_dmu_write.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dmu.c_dmu_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dmu_write(i32* %0, i32 %1, i32 %2, i32 %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32**, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %15 = load i32, i32* %10, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %6
  br label %38

18:                                               ; preds = %6
  %19 = load i32*, i32** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* @FALSE, align 4
  %24 = load i32, i32* @FTAG, align 4
  %25 = call i32 @dmu_buf_hold_array(i32* %19, i32 %20, i32 %21, i32 %22, i32 %23, i32 %24, i32* %14, i32*** %13)
  %26 = call i32 @VERIFY0(i32 %25)
  %27 = load i32**, i32*** %13, align 8
  %28 = load i32, i32* %14, align 4
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %10, align 4
  %31 = load i8*, i8** %11, align 8
  %32 = load i32*, i32** %12, align 8
  %33 = call i32 @dmu_write_impl(i32** %27, i32 %28, i32 %29, i32 %30, i8* %31, i32* %32)
  %34 = load i32**, i32*** %13, align 8
  %35 = load i32, i32* %14, align 4
  %36 = load i32, i32* @FTAG, align 4
  %37 = call i32 @dmu_buf_rele_array(i32** %34, i32 %35, i32 %36)
  br label %38

38:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @VERIFY0(i32) #1

declare dso_local i32 @dmu_buf_hold_array(i32*, i32, i32, i32, i32, i32, i32*, i32***) #1

declare dso_local i32 @dmu_write_impl(i32**, i32, i32, i32, i8*, i32*) #1

declare dso_local i32 @dmu_buf_rele_array(i32**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
